[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/common",
  "crates/model",
  "crates/cryptography",
  "crates/nexuscore_pyo3",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
license = "LGPL-3.0-or-later"

[workspace.dependencies]
nautilus-core = { path = "crates/core", version = "0.1.0" }
nautilus-common = { path = "crates/common", version = "0.1.0" }
nautilus-model = { path = "crates/model", version = "0.1.0" }
nautilus-cryptography = { path = "crates/cryptography", version = "0.1.0" }

# Core dependencies
ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0.100"
arraydeque = "0.5.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-lc-rs = { version = "1.15.4", default-features = false, features = ["non-fips"] }
base64 = "0.22.1"
bytes = { version = "1.11.0", features = ["serde"] }
chrono = { version = "0.4.43", default-features = false, features = ["serde", "std", "clock"] }
dashmap = "6.1.0"
derive_builder = { version = "0.20.2", default-features = false, features = ["alloc"] }
ed25519-dalek = "2.2.0"
enum_dispatch = "0.3.13"
evalexpr = "=11.3.1"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
heck = "0.5.0"
hex = "0.4.3"
implied-vol = { version = "2.0.0" }
indexmap = { version = "2.13.0", features = ["serde"] }
log = { version = "0.4.29", features = ["std", "kv_unstable", "serde", "release_max_level_debug"] }
pem = "3.0.6"
pyo3 = { version = "0.27.2", default-features = false, features = ["chrono", "hashbrown", "indexmap", "macros", "rust_decimal", "serde"] }
pyo3-async-runtimes = { version = "0.27.0", default-features = false, features = ["attributes", "tokio", "tokio-runtime"] }
pyo3-stub-gen = "0.16.2"
rand = { version = "0.9.2", default-features = false, features = ["std", "thread_rng"] }
regex = { version = "1.12.2", default-features = false, features = ["std", "perf", "unicode-perl"] }
rmp-serde = "1.3.1"
rust_decimal = { version = "1.40.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.40.0"
rustls = { version = "0.23.36", default-features = false, features = ["aws-lc-rs", "std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std", "rc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
smallvec = "1.15.1"
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = { version = "0.38.0", default-features = false, features = ["system"] }
tabled = { version = "0.20.0", default-features = false, features = ["std", "derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "sync", "fs", "io-util", "net", "time", "macros", "signal"] }
ustr = { version = "1.1.0", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "env-filter", "fmt", "registry"] }
webpki-roots = "1.0.5"

# Dev dependencies
rstest = "0.26.1"
proptest = "1.9.0"
tempfile = "3.24.0"

# Build dependencies
cbindgen = "0.29.2"
toml = { version = "0.9.11", default-features = false, features = ["parse", "serde"] }

[profile.dev]
opt-level = 0
debug = false
debug-assertions = false
overflow-checks = true
strip = "debuginfo"
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
strip = "symbols"
panic = "abort"
incremental = false
codegen-units = 1
