[build-system]
requires = ["setuptools>=80", "wheel", "cython==3.2.4", "numpy>=1.26.4"]
build-backend = "setuptools.build_meta"

[project]
name = "nexuscore-lib"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26.4"]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools]
packages = ["nexuscore", "nexuscore.core", "nexuscore.core.includes", "nexuscore.core.rust", "nexuscore.model", "nexuscore.common", "nexuscore.serialization"]

[tool.setuptools.package-data]
"nexuscore" = ["**/*.pxd", "**/*.pyx", "**/*.pyi", "**/*.h", "**/*.so", "**/*.dylib", "**/*.pyd"]

[dependency-groups]
dev = ["pytest>=8"]
