[package]
name = "nautilus-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Common functionality extracted from NautilusTrader"

[lib]
name = "nautilus_common"
crate-type = ["rlib", "staticlib"]

[features]
default = ["rstest"]
extension-module = [
  "nautilus-core/extension-module",
  "nautilus-model/extension-module",
  "python",
  "pyo3/extension-module",
]
ffi = ["nautilus-core/ffi", "nautilus-model/ffi", "cbindgen", "live"]
python = [
  "nautilus-core/python",
  "nautilus-model/python",
  "pyo3",
  "pyo3-async-runtimes",
  "pyo3-stub-gen",
  "live",
]
capnp = []
defi = []
indicators = []
live = ["tokio"]
tracing-bridge = ["tracing", "tracing-subscriber"]

[dependencies]
nautilus-core = { workspace = true }
nautilus-model = { workspace = true, features = ["stubs"] }

ahash = { workspace = true }
anyhow = { workspace = true }
arraydeque = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true, features = ["executor"] }
indexmap = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
sysinfo = { workspace = true }
ustr = { workspace = true }

pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true, optional = true }
